force-app/main/default/objects/DocGen_Signer__c/DocGen_Signer__c.object-meta.xml
<CustomObject>
    <label>DocGen Signer</label>
    <nameField>
        <displayFormat>SGN-{000000}</displayFormat>
        <label>Signer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocGen Signers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>