force-app/main/default/objects/DocGen_Signer__c/fields/Consent_Captured__c.field-meta.xml
<CustomField>
    <fullName>Consent_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the signer explicitly checked the consent checkbox before signing.</description>
    <label>Consent Captured</label>
    <type>Checkbox</type>
</CustomField>