force-app/main/default/objects/DocGen_Signer__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>