force-app/main/default/objects/DocGen_Signer__c/fields/PIN_Attempts__c.field-meta.xml
<CustomField>
    <fullName>PIN_Attempts__c</fullName>
    <description>Number of failed PIN verification attempts. Token is burned after 3 failed attempts.</description>
    <defaultValue>0</defaultValue>
    <label>PIN Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>