force-app/main/default/objects/DocGen_Signer__c/fields/PIN_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>PIN_Expires_At__c</fullName>
    <description>Timestamp when the current PIN expires. PINs are valid for 10 minutes.</description>
    <label>PIN Expires At</label>
    <type>DateTime</type>
</CustomField>