force-app/main/default/objects/DocGen_Signer__c/fields/PIN_Hash__c.field-meta.xml
<CustomField>
    <fullName>PIN_Hash__c</fullName>
    <description>SHA-256 hash of the 6-digit email verification PIN. Never stores the plaintext PIN.</description>
    <label>PIN Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>