force-app/main/default/objects/DocGen_Signer__c/fields/PIN_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>PIN_Verified_At__c</fullName>
    <description>Timestamp when the signer successfully verified their email PIN. Stored for audit trail.</description>
    <label>PIN Verified At</label>
    <type>DateTime</type>
</CustomField>