force-app/main/default/objects/DocGen_Signer__c/fields/Reminder_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_At__c</fullName>
    <label>Reminder Sent At</label>
    <type>DateTime</type>
</CustomField>