force-app/main/default/objects/DocGen_Signer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Signer_Name__c</columns>
    <columns>Signer_Email__c</columns>
    <columns>Role_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Consent_Captured__c</columns>
    <columns>PIN_Verified_At__c</columns>
    <columns>Signature_Request__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>